// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schemaToGraphQL converts enum 1`] = `
"type SupermodelFactoryPartsEngine {
  volume: Float
  power: Int
  fuel: SupermodelFactoryPartsEngineFuelEnum
}

enum SupermodelFactoryPartsEngineFuelEnum {
  gasoline
  diesel
  lpg
  cng
}"
`;

exports[`schemaToGraphQL converts inline object in property 1`] = `
"type SupermodelFactoryCar {
  manufacturer: String
  type: String
  weight: Int
  length: Float
  available: Boolean
  engine: SupermodelFactoryCarEngine
}

type SupermodelFactoryCarEngine {
  volume: Float
  power: Int
}"
`;

exports[`schemaToGraphQL converts required property 1`] = `
"type SupermodelFactoryCar {
  manufacturer: String!
  type: String
  weight: Int
  length: Float!
  available: Boolean
}"
`;

exports[`schemaToGraphQL converts simple object 1`] = `
"type SupermodelFactoryCar {
  manufacturer: String
  type: String
  weight: Int
  length: Float
  available: Boolean
}"
`;

exports[`schemaToGraphQL resolves refs by #/ 1`] = `
"type SupermodelFactoryCar {
  manufacturer: String
  type: String
  weight: Int
  length: Float
  available: Boolean
  engine: SupermodelFactoryPartsEngine
}

type SupermodelFactoryPartsEngine {
  volume: Float
  power: Int
}"
`;

exports[`schemaToGraphQL resolves refs by id 1`] = `
"type SupermodelFactoryCar {
  manufacturer: String
  type: String
  weight: Int
  length: Float
  available: Boolean
  engine: SupermodelFactoryPartsEngine
}

type SupermodelFactoryPartsEngine {
  volume: Float
  power: Int
}"
`;

exports[`schemaToGraphQL resolves refs by relative path 1`] = `
"type SupermodelFactoryCar {
  manufacturer: String
  type: String
  weight: Int
  length: Float
  available: Boolean
  engine: SupermodelFactoryPartsEngine
}

type SupermodelFactoryPartsEngine {
  volume: Float
  power: Int
}"
`;

exports[`schemaToGraphQL resolves refs works with nested ref objects 1`] = `
"type SupermodelFactoryCar {
  manufacturer: SupermodelFactoryManufacturer
  type: String
  weight: Int
  length: Float
  available: Boolean
  engine: SupermodelFactoryPartsEngine
}

type SupermodelFactoryPartsEngine {
  volume: Float
  power: Int
  manufacturer: SupermodelFactoryManufacturer
}

type SupermodelFactoryManufacturer {
  name: String
}"
`;
